# eez-flow-template-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.eez-project  cmake.bat  eez-flow-template-sdl.eez-project  gui.eez-project
src/: eez-framework-conf.h  eez-framework-gui-conf.h  main.cpp
src/conf/eez/: conf.h  gui_conf.h
src/gui/: app_context.cpp  document.cpp  document.h
src/platform/simulator/emscripten/: index.html  main.css  pre.js
src/platform/simulator/win32/: icon.rc
template/: manifest.json  post.js
